--- a/cont-hor/src/app/componestes/login/login.component.html
+++ b/cont-hor/src/app/componestes/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card card-signin my-5">
+                <div class="card-body">
+                    <div class="row justify-content-center">
+                        <p class="h5">Iniciar Sesión</p>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block btn-google" (click)="ingresarGoogle()"><span class="fa fa-google"></span> Google</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-facebook" (click)="ingresarGitHub()"><span class="fa fa-github"></span> GitHub</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
