--- a/cont-hor/src/app/componestes/encabezado/encabezado.component.html
+++ b/cont-hor/src/app/componestes/encabezado/encabezado.component.html
@@ -1,3 +1,18 @@
-<p>
-  encabezado works!
-</p>
+<div class="encabezado">
+    <div class="container margen">
+        <div class="row">
+            <div class="col-1">
+                <img class="rounded-circle" src="{{usuario.urlFoto}}" width="70" height="70" alt="Imagen de usuario">
+            </div>
+            <div class="col-10 margen">
+                <p>{{usuario.nombre}}</p>
+                <p>{{usuario.email}}</p>
+            </div>
+            <div class="col-1 margen">
+                <a href="" routerLinkActive="active" [routerLink]="['login']" (click)="salir()">
+                    <span class="fa fa-sign-out mr-2 fa-2x"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
